# caliptra-cfi

./: .gitignore  CODEOWNERS  Cargo.toml  README.md  ci.sh
.github/workflows/: main.yml
derive/: Cargo.toml
derive/src/: cfi_asm_test.rs
lib/: Cargo.toml
lib/src/: cfi.rs  cfi_counter.rs  error.rs  lib.rs  xoshiro.rs
lib/tests/: test_asm.rs
