# Licensed under the Apache-2.0 license

[package]
name = "caliptra-cfi-lib"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dev-dependencies]
caliptra-cfi-derive = { version = "0.1.0", path = "../derive" }
serial_test = "2.0.0"

[features]
default = ["cfi", "cfi-counter", "cfi-test"]
cfi = []
cfi-counter = []
cfi-test = []
